# Project-Yggdrasil-dev-test

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.en.md  README.md  SECURITY.md  本项目任务.md  模型表.txt  认知系统架构蓝图.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
old/: AI 记忆方案研究与评估.md  note.txt  概念文档.txt  项目概念.txt
portable_llm/: README.md  __init__.py  config.example.yaml  error_handler.py  example_usage.py  gcloud_auth.py  keys.yaml.example  llm_client.py  llm_models.py  requirements.txt
portable_llm/providers/: __init__.py  base.py  deepseek.py  gemini.py  longcat.py  openrouter.py  vectorengine.py
prompts/: bootloader_prompt.md  compress_context_prompt.md
src/: README.md  _dump_tree.py  pyproject.toml  test_yggdrasil.py
src/yggdrasil/: __init__.py  agent_loop.py  async_agent_loop.py  async_web.py  bootstrap.py  conversation_manager.py  database.py  decay.py  memory_engine.py  prompts.py  server.py  task_queue.py  tool_router.py  web.py  web_search.py  workspace_tools.py
src/yggdrasil/static/: index.html
特性/: AI 自我进化与核心 MVP.md  LLM 评测系统自我进化.md  LLM上下文管理模式.md  主动怀疑，防止在意外错误上死循环.md  其他工具调用设计.md  动态工具检索架构.md  并发读写控制.md  智能体上下文管理.md  智能体长程任务处理方式.md  最原始的增删改查工具.md  根节点设计.md  碎节点整理.md  自我决定记忆衰减系数.md  节点设计.md  记忆与遗忘管理.md  记忆搜索方案.md  长文本读取机制.md
