[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yggdrasil"
version = "0.3.0"
description = "Project Yggdrasil - Cognitive Memory Engine for LLM Agents"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
]

[project.scripts]
yggdrasil = "yggdrasil.server:main"
yggdrasil-web = "yggdrasil.async_web:main"
